fixed lander to show image on mobile and inserted images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,6 @@ a:hover {
 .video-container {
     overflow: hidden;
     height: 100vh;
-
 }
 
 .video-container video {
@@ -182,18 +181,6 @@ a:hover {
     filter: drop-shadow(0 0 0.75rem #cec7f5);
 } */
 
-
-
-@media (max-width: 800px) {
-    .video-container {
-        height: 100vh;
-}
-.video-container img {
-    width: auto;
-    height: 100vh;
-    object-fit:cover; 
-}
-    }
 
 /* 404 */
 .FourOhFourCentered {
